--- a/Day-1/package.json
+++ b/Day-1/package.json
@@ -2,7 +2,6 @@
   "name": "day-1",
   "version": "1.0.0",
   "description": "This is first React by Ayush",
-  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
@@ -10,6 +9,14 @@
   "author": "Ayush Aryan",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
-  }
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserlist" : [ 
+    "last 2 version"
+  ]
 }
