--- a/Day-1/package.json
+++ b/Day-1/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "This is first React by Ayush",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "build index.html",
     "test": "jest"
   },
   "keywords": [],
